# aws-via-haskell

./: aws-via-haskell.cabal  shell.nix  stack.yaml
ec2/: EC2Imports.hs  Main.hs
lib/: AWSViaHaskell.hs
lib/AWSViaHaskell/: Classes.hs  Prelude.hs  Service.hs  Types.hs  Util.hs
