name:                                       aws-via-haskell
version:                                    0.1.0.0
homepage:                                   https://github.com/rcook/aws-via-haskell#readme
license:                                    MIT
license-file:                               LICENSE
author:                                     Richard Cook
maintainer:                                 rcook@rcook.org
copyright:                                  2017 Richard Cook
category:                                   Command Line
build-type:                                 Simple
cabal-version:                              >= 1.10
extra-source-files:                         README.md

source-repository head
  type:                                     git
  location:                                 https://github.com/rcook/aws-via-haskell.git

library
  default-language:                         Haskell2010
  hs-source-dirs:                           lib
  ghc-options:                              -W -Wall -fwarn-incomplete-patterns -fwarn-unused-imports
  build-depends:                            amazonka
                                          , amazonka-core
                                          , base >= 4.7 && < 5
                                          , bytestring
                                          , lens
                                          , protolude
                                          , text
                                          , resourcet
  exposed-modules:                          AWSViaHaskell
                                          , AWSViaHaskell.Classes
                                          , AWSViaHaskell.Prelude
                                          , AWSViaHaskell.Service
                                          , AWSViaHaskell.Types
                                          , AWSViaHaskell.Util
  default-extensions:                       NoImplicitPrelude
                                          , OverloadedStrings
                                          , RecordWildCards
